[gd_scene load_steps=8 format=3 uid="uid://cwiritx4rencv"]

[ext_resource type="Script" uid="uid://ic7q6hrbkrni" path="res://scripts/ui/character_icon.gd" id="1_2gkvw"]
[ext_resource type="Texture2D" uid="uid://dhpcoum0eycgh" path="res://art/2d/enemies/icons/chaser_icon.aseprite" id="1_2ymfj"]
[ext_resource type="PackedScene" uid="uid://6lvn3tolsp7r" path="res://scenes/ui/buttons/menu_button.tscn" id="2_xlxpa"]
[ext_resource type="FontFile" uid="uid://b78ski6kf8hw1" path="res://fonts/ari-w9500-display.ttf" id="3_xlxpa"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2gkvw"]
bg_color = Color(1, 1, 1, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4
border_color = Color(1, 1, 1, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2ymfj"]
bg_color = Color(0.3032328, 0.30323285, 0.30323276, 1)
corner_radius_top_left = 32
corner_radius_top_right = 32
corner_radius_bottom_right = 32
corner_radius_bottom_left = 32
corner_detail = 4

[sub_resource type="FontVariation" id="FontVariation_xlxpa"]
base_font = ExtResource("3_xlxpa")
spacing_glyph = 2

[node name="EnemyIcon" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -0.519989
offset_top = -0.2000122
offset_right = 0.52001953
offset_bottom = 0.2000122
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_2gkvw")

[node name="PanelContainer" type="PanelContainer" parent="."]
custom_minimum_size = Vector2(200, 200)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 6
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_2gkvw")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("1_2ymfj")

[node name="Button" parent="PanelContainer" instance=ExtResource("2_xlxpa")]
layout_mode = 2
mouse_filter = 1
toggle_mode = true
focus_enabled = false

[node name="DescriptionPanel" type="Panel" parent="."]
modulate = Color(1, 1, 1, 0)
z_index = 10
custom_minimum_size = Vector2(350, 400)
layout_mode = 0
offset_left = -175.0
offset_top = -200.0
offset_right = 175.0
offset_bottom = 200.0
size_flags_horizontal = 10
size_flags_vertical = 4
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_2ymfj")

[node name="TextContainer" type="VBoxContainer" parent="DescriptionPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="NameText" type="RichTextLabel" parent="DescriptionPanel/TextContainer"]
custom_minimum_size = Vector2(0, 45)
layout_mode = 2
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("3_xlxpa")
theme_override_font_sizes/normal_font_size = 32
bbcode_enabled = true
text = "[tornado radius=3 freq=4]"
horizontal_alignment = 1

[node name="CategoryText" type="RichTextLabel" parent="DescriptionPanel/TextContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
mouse_filter = 2
theme_override_fonts/normal_font = SubResource("FontVariation_xlxpa")
theme_override_font_sizes/normal_font_size = 16
bbcode_enabled = true
text = "[shake rate=10 level=1]"
horizontal_alignment = 1

[node name="DescriptionText" type="RichTextLabel" parent="DescriptionPanel/TextContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("3_xlxpa")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
scroll_active = false
shortcut_keys_enabled = false
horizontal_alignment = 1

[connection signal="mouse_entered" from="PanelContainer" to="." method="_on_hover"]
[connection signal="mouse_exited" from="PanelContainer" to="." method="_on_unhover"]
[connection signal="toggled" from="PanelContainer/Button" to="." method="_on_toggle"]
